css/style.css
/* imports for fonts */
@font-face {
  font-family: Chaparral;
  src: url('../fonts/Chaparral\ Pro\ Light.otf');
}

@font-face {
  font-family: Tungsten;
  src: url('../fonts/Tungsten\ Rounded\ SemiBold.otf');
}

/* global styles */
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

/* global font styles */
h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: Tungsten;
}

p {
  font-family: Chaparral;
}

a {
  font-family: Tungsten;
}

/* body style for index page */
#index {
  background: #000;
  color: #fff;
}

/* menu popup styles */
.menu-popup {
  min-height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6));
  display: none;
  align-items: flex-end;
  z-index: 2;
  /* max-width: 1400px;
  margin: auto; */
}

.menu-popup .menu-popup-content {
  display: flex;
  flex-direction: column;
  max-width: 1023px;
  width: 90%;
  margin: 0 auto;
  margin-bottom: 4vh;
  /* max-width: 1400px; */
}

@media (min-width: 2000px) {
  .menu-popup {
    align-items: center;
  }
}

.gesture-emoji {
  position: absolute;
  right: 5%;
  top: 5%;
  width: 100px;
  height: 100px;
  cursor: pointer;
  transition: 300ms;
}

.gesture-emoji:hover {
  transform: scale(1.1);
  transition: 300ms;
}

.menu-popup a {
  color: #fff;
  font-size: 6.25rem;
  text-decoration: none;
  font-weight: 600;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.2;
  letter-spacing: normal;
  text-transform: uppercase;
}

.menu-popup a:hover {
  color: #9e673e;
}

.blur-content {
  filter: blur(14px);
}

/* normal carousel NON HOVER styles */
.carousel {
  position: relative;
}

.carousel-content {
  display: flex;
  margin: 150px 0 70px;
  transition: 500ms;
  /* display: inline; */
}

.carousel-content img {
  height: 110vh;
  min-width: 100vw;
  max-width: 100vw;
  /* object-fit: fill; */
  object-fit: cover;

  /* position: absolute; */
}

.carousel .carousel-control-left {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  width: 10%;
  cursor: pointer;
  z-index: 1;
}

.carousel .carousel-control-right {
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  width: 10%;
  cursor: pointer;
  z-index: 1;
}

/* carousel HOVER styles */
.image-carousel {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: -1000;
  display: none;
}

.image-array {
  width: 100%;
  min-height: 100vh;
  object-fit: cover;
  overflow: hidden;
  /* display: none; */
}

/* home screen landing styles */
.fullscreen-landing {
  display: flex;
  justify-content: center;
  flex-direction: column;
  min-height: 100vh;
  max-width: 866px;
  width: 90%;
  margin: auto;
}

.fullscreen-landing h1 {
  color: #9e673e;
  font-size: 1.5rem;
  font-weight: 600;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  letter-spacing: 1px;
  text-transform: uppercase;
  margin-bottom: 13px;
}

.fullscreen-landing p {
  font-size: 1.6875rem;
  font-weight: 300;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.48;
  letter-spacing: normal;
  margin-bottom: 50px;
}

/* .fullscreen-landing h2 {
  font-size: 6.25rem;
  font-weight: 600;
  font-style: normal;
  font-stretch: normal;
  line-height: 1;
  letter-spacing: normal;
  text-transform: uppercase;
  cursor: pointer;
} */
.fullscreen-landing div span {
  font-size: 6.25rem;
  font-weight: 600;
  font-style: normal;
  font-stretch: normal;
  line-height: 1;
  letter-spacing: normal;
  text-transform: uppercase;
  cursor: pointer;
  font-family: Tungsten;
  margin-right: 25px;
  margin-bottom: 20px !important;
  display: inline-block;
}

.fullscreen-landing div span a {
  text-decoration: none;
  color: #fff;
}

.fullscreen-landing div span:nth-of-type(1) {
  border-bottom: 2px solid #9e673e;
}

/* adds class when menu open to blur landing content */
.fullscreen-landing-blur {
  filter: blur(13px);
}

/* mobile style for index page */
@media (max-width: 800px) {
  .fullscreen-landing h1 {
    font-size: 1.3rem;
  }

  .fullscreen-landing p {
    font-size: 1.4rem;
    margin-bottom: 30px;
  }

  .fullscreen-landing h2 {
    font-size: 5rem;
  }

  .fullscreen-landing div span {
    font-size: 5rem;
    margin-right: 15px;
  }
}

@media (max-width: 620px) {
  .fullscreen-landing div span {
    font-size: 4rem;
    margin-right: 10px;
  }

  .fullscreen-landing p {
    margin-bottom: 20px;
  }
}

@media (max-width: 500px) {
  .fullscreen-landing h1 {
    font-size: 1.2rem;
  }

  .fullscreen-landing p {
    font-size: 1.3rem;
    margin-bottom: 30px;
  }

  .fullscreen-landing div span {
    font-size: 4rem;
  }
}

@media (max-width: 390px) {
  .fullscreen-landing h1 {
    font-size: 1.1rem;
  }

  .fullscreen-landing p {
    font-size: 1.2rem;
    margin-bottom: 30px;
  }

  .fullscreen-landing div span {
    font-size: 3rem;
  }
}

@media (max-width: 360px) {
  .fullscreen-landing h1 {
    font-size: 1rem;
  }

  .fullscreen-landing p {
    font-size: 1.05rem;
    margin-bottom: 30px;
  }

  .fullscreen-landing div span {
    font-size: 2rem;
  }
}

/* styles for case study page */

/* body style for case study page */
.case-study {
  background: #161616;
}

.case-study header {
  min-height: 75vh;
  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
    url('../img/img-1.jpeg');
  background-size: cover;
  display: flex;
}

/* remove background attachment for mobile */
@media (min-width: 992px) {
  .case-study header {
    background-attachment: fixed;
  }
}

.case-study .header-content {
  max-width: 662px;
}

.case-study .header-content h1 {
  font-size: 6.25rem;
  color: #fff;
  font-weight: 600;
  font-style: normal;
  font-stretch: normal;
  line-height: 1;
  letter-spacing: normal;
}

.case-study .header-content h2 {
  font-size: 1.5rem;
  color: #03d3d3;
  font-weight: 600;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  letter-spacing: 2px;
}

.case-study .header-content-wrapper {
  max-width: 1400px;
  margin: 0 auto;
  width: 80%;
  display: flex;
  align-items: center;
}

/* visual designer section */
.case-study .visual-designer {
  padding: 100px 0;
  max-width: 1400px;
  margin: 0 auto;
  width: 80%;
  /* border: 1px solid red; */
}

.case-study .visual-designer h3 {
  color: #03d3d3;
  font-size: 1.5rem;
  font-weight: 600;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  letter-spacing: 2px;
  text-transform: uppercase;
  margin-bottom: 15px;
}

.case-study .visual-designer p {
  font-size: 1.6875rem;
  font-weight: 300;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.48;
  letter-spacing: normal;
  color: #fff;
  max-width: 877px;
  margin-bottom: 60px;
}

.case-study .visual-designer img {
  width: 100%;
}

/* two people image section  */
.case-study .two-people img {
  width: 100%;
  height: 60vh;
  object-fit: cover;
}

.case-study .nba {
  padding: 100px 0;
  max-width: 1400px;
  width: 80%;
  margin: auto;
}

.case-study .nba img {
  width: 100%;
}

/* footer */
.case-study footer {
  padding: 60px 0 115px;
  background: #000;
}

.case-study .footer-content {
  width: 80%;
  margin: auto;
  max-width: 1400px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.case-study .footer-content a {
  font-size: 4.5rem;
  text-decoration: none;
  text-transform: uppercase;
  font-weight: 600;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.04;
  letter-spacing: normal;
  text-align: center;
  color: #fff;
}

.case-study .footer-content a:nth-of-type(1) {
  font-size: 1.5rem;
  color: #03d3d3;
  font-weight: 600;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  letter-spacing: 2px;
  text-align: center;
  margin-bottom: 80px;
}

/* mobile styles for case */
@media (max-width: 800px) {
  .case-study .header-content h1 {
    font-size: 5rem;
  }

  .case-study .visual-designer {
    padding: 70px 0;
  }

  .case-study .visual-designer p {
    margin-bottom: 40px;
  }

  .case-study .nba {
    padding: 70px 0;
  }

  .case-study footer {
    padding: 40px 0 80px;
  }

  .case-study .footer-content a:nth-of-type(1) {
    margin-bottom: 50px;
  }
}

@media (max-width: 570px) {
  .case-study .header-content-wrapper {
    width: 90%;
  }

  .case-study .header-content h1 {
    font-size: 4rem;
  }

  .case-study .visual-designer h3 {
    font-size: 1.3rem;
  }

  .case-study .visual-designer {
    padding: 50px 0;
    width: 90%;
  }

  .case-study .visual-designer p {
    margin-bottom: 30px;
    font-size: 1.45rem;
  }

  .case-study .nba {
    padding: 50px 0;
    width: 90%;
  }

  .case-study footer {
    padding: 30px 0 60px;
  }

  .case-study footer .footer-content {
    width: 90%;
  }

  .case-study .footer-content a {
    font-size: 3.5rem;
  }
}

@media (max-width: 420px) {
  .case-study .header-content h1 {
    font-size: 3.35rem;
  }
}

/* about page styles */
.about {
  background: #161616;
}

.about header {
  display: flex;
  justify-content: center;
  background: #f9f9f9;
  padding-top: 3px;
}

.about header img {
  width: 100%;
  max-width: 591px
    /* CHANGE WIDTH FOR NON PLACEHOLDER PIC */
  ;
  object-fit: cover;
}

.about .about-info {
  width: 80%;
  margin: auto;
  max-width: 877px;
  padding: 100px 0;
}

.about .about-info h1 {
  color: #9e673e;
  margin-bottom: 15px;
  text-transform: uppercase;
  font-size: 1.5rem;
  font-weight: 600;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  letter-spacing: 2px;
}

.about .about-info p {
  color: #fff;
  font-weight: 300;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.48;
  letter-spacing: normal;
  font-size: 1.6875rem;
  margin-bottom: 30px;
}

.about .jobs {
  display: flex;
  flex-wrap: wrap;
  margin-top: 50px;
  /* justify-content: center; */
}

.about .jobs .job {
  /* min-width: 427px; */
  width: 50%;
}

.about .jobs .job span {
  font-family: Chaparral;
  font-size: 0.875rem;
  color: #fff;
  font-weight: normal;
  font-style: italic;
  font-stretch: normal;
  line-height: normal;
  letter-spacing: normal;
  margin-bottom: 2px;
}

.about .jobs .job h2 {
  font-weight: 600;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  letter-spacing: normal;
  color: #fff;
  margin-bottom: 39px;
  font-size: 1.5rem;
  text-transform: uppercase;
}

.about footer {
  background: #000;
  padding: 60px 0;
}

.about footer .footer-content {
  display: flex;
  flex-direction: column;
  max-width: 877px;
  margin: auto;
}

.about footer .footer-content a {
  text-decoration: none;
  color: #fff;
  font-size: 4.5rem;
  text-align: center;
  font-weight: 600;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.04;
  letter-spacing: normal;
  text-transform: uppercase;
}

.about footer .footer-content a:nth-of-type(1) {
  font-size: 1.5rem;
  color: #9e673e;
  margin-bottom: 80px;
}

/* mobile styles for about */
@media (max-width: 800px) {
  .about .about-info {
    width: 90%;
    padding: 70px 0;
  }
}

@media (max-width: 680px) {
  .about .jobs .job {
    /* min-width: 427px; */
    width: 100%;
  }
}

/* mobile styles for menu popup */
@media (max-width: 800px) {
  .menu-popup {
    align-items: center;
  }

  .menu-popup a {
    font-size: 5rem;
  }
}

@media (max-width: 520px) {
  .menu-popup a {
    font-size: 4rem;
    display: inline;
  }

  .menu-popup .gesture-emoji {
    position: absolute;
    right: 30px;
    top: 30px;
    width: 80px;
    height: 80px;
    cursor: pointer;
  }
}

